--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,8 @@ footer{
     display: inline-flex;
     color: rgb(80, 25, 0);
     text-align-last: center;
+ 
+   
 }
 h3{
     padding-right: 250px;
@@ -15,4 +17,32 @@ body{
     color: rgb(80, 25, 0);
     text-align-last: center;
     text-shadow: 0.3px 1px #1f003b;
+    margin-right: 100px;
+}
+table {
+    border: 2px solid black;
+    border-collapse: collapse;
+    border: 1px solid black;
+    width: 50%;
+    margin-top: 50px;
+    margin-left: 400px;
+    margin-bottom: -180px;
+    
+}
+th {
+    height: 20px;
+}
+tr {
+    border: 2px solid black;
+    border-collapse: collapse;
+    border: 1px solid black;
+}
+td {
+    border: 2px solid black;
+    border-collapse: collapse;
+    border: 1px solid black;
+}
+footer, h3 {
+    position: relative;
+    top:230px;
 }
