--- a/css/style.css
+++ b/css/style.css
@@ -15,10 +15,11 @@ body{
 
 .logo{
   border-radius: 4px;
+  transform: rotate(-25deg);
   padding: 5px;
   width: 150px;
   float: left;
-  transform: rotate(-15deg);
+  
 }
 * {box-sizing: border-box;}
 .topnav {
@@ -52,6 +53,7 @@ body{
   text-align: center;
   color: #683200;
   font-size:xx-large;
+  font-family: 'Playfair Display', serif;
   display: inline;
 }
 .websiteEnter ul li{
@@ -68,6 +70,7 @@ body{
   padding-top:15px;
   padding-bottom: 15px;
   padding-left:30px;
+  font-family: 'Playfair Display', serif;
   
 }
 
@@ -77,7 +80,7 @@ body{
   padding-top:15px;
   padding-bottom: 15px;
   padding-left:30px;
-  
+  font-family: 'Playfair Display', serif;
 
 }
 
@@ -93,6 +96,7 @@ body{
   color: rgb(0, 0, 0);
   text-align: center;
   margin-top:40px;
+  font-family: 'Playfair Display', serif;
 }
 .row5 p{
   font-size: large;
@@ -110,6 +114,7 @@ input[type=text], input[type=number] {
   background-color: rgb(255, 239, 220);
   resize:vertical;
   cursor:pointer;
+  font-family: 'Poppins', sans-serif;
 }
 input[type=submit]{
   background-color: rgb(255, 239, 220);
@@ -127,6 +132,7 @@ input[type=submit]:hover {
 label{
   margin-left: 50px;
   font-size: xx-large;
+  font-family: 'Playfair Display', serif;
 }
 form{
   display:inline;
@@ -135,7 +141,7 @@ form{
 input:invalid{
   border: 10px #805736;
 }
-/* Styling the table*/
+/* table style*/
 
 
 table th, td{
@@ -143,8 +149,8 @@ table th, td{
   margin: 20px;
   padding: 15px;
   border: 1px solid black;
-  align-items: center;
   font-size: 18px;
+  font-family: 'Playfair Display', serif;
 }
 
 tr:first-child{
